crates/squealy/tests/compile_fail/aggregate_rejected_in_generated_where.stderr
error[E0277]: the trait bound `squealy::AggregateExprAst<squealy::ColumnExprAst<CounterId>>: NonAggregateAst` is not satisfied
  --> tests/compile_fail/aggregate_rejected_in_generated_where.rs:16:10
   |
16 |         .where_(|counter| counter.id.count().greater_than(0i64));
   |          ^^^^^^ the trait `NonAggregateAst` is not implemented for `squealy::AggregateExprAst<squealy::ColumnExprAst<CounterId>>`
   |
help: the trait `NonAggregatePredicate` is implemented for `squealy::ComparePredicateAst<Left, Right>`
  --> $WORKSPACE/crates/squealy-core/src/expr.rs
   |
   | / impl<Left, Right> NonAggregatePredicate for ComparePredicateAst<Left, Right>
   | | where
   | |     Left: NonAggregateAst,
   | |     Right: NonAggregateAst,
   | |___________________________^
   = note: required for `squealy::ComparePredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<CounterId>>, squealy::LiteralExprAst<i64>>` to implement `NonAggregatePredicate`
note: required by a bound in `__SquealyCounterWriteBuilder::<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyCounterTotalWriteInsertState, __SquealyCounterTotalWriteUpdateState>::where_`
  --> tests/compile_fail/aggregate_rejected_in_generated_where.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyCounterWriteBuilder::<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyCounterTotalWriteInsertState, __SquealyCounterTotalWriteUpdateState>::where_`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
